--- a/views/pages/home_2.hbs
+++ b/views/pages/home_2.hbs
@@ -44,7 +44,7 @@
 <div class="loader" id="loader">
     {{!-- <div class="loader-15" id="loader-15"></div> --}}
     <div class="response_msg" id="resp_msg">
-        <div class="close_b">
+        <div class="close_b" id="close_b">
             <i class="fa-solid fa-circle-xmark"></i>
         </div>
         <h4>All qr-code codes has been send via email to your email address</h4>
