--- a/views/pages/home_2.hbs
+++ b/views/pages/home_2.hbs
@@ -42,7 +42,7 @@
 </section>
 
 <div class="loader" id="loader">
-    {{!-- <div class="loader-15" id="loader-15"></div> --}}
+    <div class="loader-15" id="loader-15"></div>
     <div class="response_msg" id="resp_msg">
         <div class="close_b" id="close_b">
             <i class="fa-solid fa-circle-xmark"></i>
