--- a/public/css/main_2.css
+++ b/public/css/main_2.css
@@ -147,6 +147,7 @@ flex-direction: column; */
     flex-direction: column;
     width: 100%;
     margin-top: 15px;
+    cursor: pointer;
 }
 
 .upload-btn-wrapper {
@@ -289,4 +290,56 @@ flex-direction: column; */
   justify-content: end;
   cursor: pointer;
   color: rgb(184, 0, 0);
+}
+
+.multit_cont{
+  display: flex;
+  margin-top: 30px;
+}
+
+.multit_cont .fa-info{
+  margin-left: 8px;
+  width: 8px;
+  height: 8px;
+  font-size: 31px;
+  border: 2px solid #d0d0d0;
+  border-radius: 50%;
+  padding: 3px;
+  color: #d0d0d0;
+  cursor: pointer;
+  margin-top: 1px;
+}
+
+#alertButton {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.custom-alert {
+  display: none;
+  position: fixed;
+  top: 28px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.alert-content {
+  background-color: #322985;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  position: relative;
+  transition: transform 0.3s ease-out;
+  transform: translateY(-50px); 
+  width: 482px;
+  color: white;
+}
+
+.custom-alert.show .alert-content {
+  transform: translateY(0);
 }
