--- a/views/pages/home_2.hbs
+++ b/views/pages/home_2.hbs
@@ -23,7 +23,9 @@
                 </div>
                 <div class="multit_cont"id="info_b">
                     <h3 style="margin-bottom: 0px;margin-top: 0px;">GET MULTIPLE QR-CODE</h3>
+                    <div class="info_">
                     <i class="fa-solid fa-info" ></i>
+                    </div>
                 </div>
                 {{!-- <span class="contt">Get multiple result by entering an excel sheet</span> --}}
                 <a href="/excel_sheets/template.xlsx" download="excel_template.xlsx">See excel example...</a>
